Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidString.ru
/? Error Léxico, caracter dentro del string no pertenece al alfabeto.
"hola¬"